--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,6 +1,8 @@
 name: Playwright Tests
 
+
 on:
+  workflow_dispatch:       # <-- enables manual trigger
   push:
     branches: [ main, master ]
   pull_request:
