--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,8 +1,7 @@
 name: Playwright Tests
 
-
 on:
-  workflow_dispatch:       # <-- enables manual trigger
+  workflow_dispatch:       # manual trigger
   push:
     branches: [ main, master ]
   pull_request:
@@ -24,7 +23,13 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
-        run: npx playwright test --reporter=html
+        run: npx playwright test --reporter=html --reporter=line
+      - name: Ensure report folder exists
+        run: |
+          if [ ! -d "playwright-report" ]; then
+            echo "No report found, creating empty folder..."
+            mkdir playwright-report
+          fi
       - name: Upload Playwright HTML report
         uses: actions/upload-artifact@v4
         with:
@@ -34,11 +39,11 @@ jobs:
       - name: Send Email Notification
         uses: dawidd6/action-send-mail@v3
         with:
-          server_address: smtp.gmail.com       # or your SMTP server
+          server_address: smtp.gmail.com
           server_port: 465
-          username: ${{ secrets.EMAIL_USERNAME }}   # set in GitHub Secrets
-          password: ${{ secrets.EMAIL_PASSWORD }}   # set in GitHub Secrets
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
           subject: Playwright Test Results
-          body: Playwright tests have finished. Check attached report.
+          body: Playwright tests have finished. Check attached report. 
           to: thembanaterichard@gmail.com
-          attachments: playwright-report/*
+          attachments: playwright-report/index.html
